--- a/code/index.html
+++ b/code/index.html
@@ -25,7 +25,10 @@
           <li><a class="nav-item" href="#">Newsletter</a></li>
           <li><a class="nav-item" href="#">Subscribe</a></li>
           <li><a class="nav-item" href="#">Sign in</a></li>
-          <li><a class="nav-item" href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+          <li><a class="nav-item" href="#">
+              <i class="fa fa-search" aria-hidden="true"></i>
+              </a>
+          </li>
         </ul>
       </nav>
       <label for="nav-toggle" class="nav-toggle-label"><span></span></label>
