--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
     <header class="header-navigation-container">
 
       <div>
-        <img class="logo" src="/code/img/Mz_logo.png" alt="logo">
+        <img class="logo" src="./img/Mz_logo.png" alt="logo" />
       </div>
       <div class="header-navigation-container"></div>
       <h1 class="site-name">mamzine</h1>
@@ -27,7 +27,6 @@
         <li class="nav-item" style="display:inline"> <a href="#">Link</a> </li>
         <li class="nav-item" style="display:inline"> <a href="#">Link</a> </li>
         <li class="nav-item" style="display:inline"> <a href="#">Link</a> </li>
-
       </ul>
       </nav>
       </div>
@@ -38,7 +37,7 @@
   <section class="big-news-container">
 
     <div class="big-news-parent">
-      <img class="big-news-image" src="/code/img/queen of code.jpg" alt="code" />
+      <img class="big-news-image" src="./img/queen of code.jpg" alt="women" />
       <div class="text">
         <h1>Queen of Code #1.</h1>
         <p class="big-news-text">Computer programming once had much better gender balance than it does today. What went
@@ -52,28 +51,28 @@
   <section class="news-cards-parent">
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen </h3>
-      <img class="news-img" src="/code/img/queen3.jpg" alt="women">
+      <img class="news-img" src="./img/queen3.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="img/queen3.jpg">
+      <img class="news-img" src="./img/queen2.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="/code/img/queen3.jpg">
+      <img class="news-img" src="./img/hijabi2.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="/code/img/queen3.jpg" alt="women">
+      <img class="news-img" src="./img/hijabi.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it. </p>
     </div>
@@ -89,14 +88,14 @@
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
 
-      <img class="news-img" src="img/queen3.jpg" alt="women">
+      <img class="news-img" src="./img/queen1.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it.</p>
     </div>
 
-    <div class="news-card-child">
+    <div class=" news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="img/queen3.jpg" alt="women">
+      <img class="news-img" src="./img/queen5.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it.
       </p>
@@ -104,7 +103,7 @@
 
     <div class="news-card-child">
       <h3>Meet Betelhem Dessie, Ethiopia’s leading tech queen</h3>
-      <img class="news-img" src="img/queen3.jpg" alt="women">
+      <img class="news-img" src="./img/queen6.jpg" alt="women" />
       <p>I just might be a black Bill Gates in the making.I see it, I want it, I stunt, yellow-bone it
         I dream it, I work hard, I grind 'til I own it.</p>
     </div>
