added classes for headlines and paragraphs

--- a/code/index.html
+++ b/code/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8" />
     <title>Project 2: The News Site</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+    <meta name="viewport" content= "width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&family=Oxygen:wght@300;400;700&display=swap" rel="stylesheet">
   </head>
+
   <body>
+
     <header>
       <div class="navigation-container">
         <nav class="navigation">
-          <a href="" class="navigation-logo">
+          <a href="#" class="navigation-logo">
             <img class="navigation-logo-img" src="the-telegraph-logo.svg" />
           </a>
           <ul class="navigation-list">
             <li class="navigation-list-item" style="display:inline">
-              <a href="" alt="1">Inrikes</a>
+              <a href="#" alt="Inrikes">Inrikes</a>
             </li>
             <li class="navigation-list-item" style="display:inline">
-              <a href="" alt="1">Utrikes</a>
+              <a href="#" alt="Utrikes">Utrikes</a>
             </li>
             <li class="navigation-list-item" style="display:inline">
-              <a href="" alt="1">Sport</a>
+              <a href="#" alt="Sport">Sport</a>
             </li>
             <li class="navigation-list-item" style="display:inline">
-              <a href="" alt="1">Kultur</a>
+              <a href="#" alt="Kultur">Kultur</a>
             </li>
           </ul>
         </nav>
@@ -37,67 +37,67 @@
 
     <section class="big-news-parent">
       <div class="big-news-child blue">
-        <h4>UTRIKES</h4>
+        <div class="subheadline">UTRIKES</div>
         <img class="news-img" src="https://picsum.photos/600/400" alt="random photo" />
-        <h1>Ut enim ad minim veniam quis nostrud</h2>
-        <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="headline-big-news">Ut enim ad minim veniam quis nostrud</div>
+        <p class="paragraph">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </div>
     </section>
 
     <section class="news-cards-parent">
       <div class="news-cards-child red">
-        <h4>INRIKES</h4>
+        <div class="subheadline">INRIKES</div>
         <img class="news-img" src="https://picsum.photos/250/125" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child blue">
-        <h4>UTRIKES</h4>
+        <div class="subheadline">UTRIKES</div>
         <img class="news-img" src="https://picsum.photos/400/200" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child pink">
-        <h4>SPORT</h4>
+        <div class="subheadline">SPORT</div>
         <img class="news-img" src="https://picsum.photos/500/250" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
-        <h4>KULTUR</h4>
+        <div class="subheadline">KULTUR</div>
         <img class="news-img" src="https://picsum.photos/600/300" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child blue">
-        <h4>UTRIKES</h4>
+        <div class="subheadline">UTRIKES</div>
         <img class="news-img" src="https://picsum.photos/450/225" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child pink">
-        <h4>SPORT</h4>
+        <div class="subheadline">SPORT</div>
         <img class="news-img" src="https://picsum.photos/350/175" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child green">
-        <h4>KULTUR</h4>
+        <div class="subheadline">KULTUR</div>
         <img class="news-img" src="https://picsum.photos/480/240" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       <div class="news-cards-child red">
-        <h4>INRIKES</h4>
+        <div class="subheadline">INRIKES</div>
         <img class="news-img" src="https://picsum.photos/460/230" alt="random photo" />
-        <h2>Duis aute irure dolor in repre hende rit in voluptate</h2>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div class="headline-news-cards">Duis aute irure dolor in repre hende rit in voluptate</div>
+        <p class="paragraph">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
       
     </section>
     
     <footer>
-      <p>Copyright © The Telegraph 2021</p>
+      <p class="paragraph">Copyright © The Telegraph 2021</p>
     </footer>
 
   </body>
