started with making the site responsive, desktop first, so tablet and mobile view

--- a/code/index.html
+++ b/code/index.html
@@ -27,6 +27,7 @@
         <li><a href="#"><strong>today</strong></a></li>
         <li><a href="#"><strong>tomorrow</strong></a></li>
         <li><a href="#"><strong>forever</strong></a></li>
+        <li><a href="#"><strong>contact</strong></a></li>
         </ul>
       </nav>
     </header>
@@ -34,9 +35,7 @@
     <section class="big-news-parent-grid">
       <!--The big news container grid -->
       <div class="big-news-picture">
-        <a>
           <img class="big-picture" src="./images/calm beach.jpeg" alt="Relaxing beach" class="big-picture">
-        </a>
       </div>
       <div class="big-news-text">
         <h1>NEXT WEEKS NEWS</h1>
@@ -94,7 +93,7 @@
     </section>
     
     <div class="footer">
-      <h3>Made with love @the home office 2021</h3>
+      <p>Made with love @the home office 2021</p>
     </div>
   </body>
 </html>
