--- a/code/index.html
+++ b/code/index.html
@@ -1,168 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>News Magazine</title> 
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="./news.png">     <!--favicon-->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>News Magazine</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="./news.png" />
+    <!--favicon-->
     <!--fonts from Google-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaisei+Opti:wght@400;500;700&display=swap" rel="stylesheet">
- </head>
-    <body>
-        <!--top-bar with two div, top-bar left and top-bar right-->
-        <nav class="top-bar" id="top">
-            <section class="top-bar left">
-                <div class="logo">
-                    <img src="./news.png" 
-                    alt="news icon" 
-                    width="30" height=30>
-                </div>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kaisei+Opti:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <!--top-bar with two div, top-bar left and top-bar right-->
+    <nav class="top-bar" id="top">
+      <section class="top-bar left">
+        <div class="logo">
+          <img src="./news.png" alt="news icon" width="30" height="30" />
+        </div>
 
-                <div class="search">   
-                    <a href="https://www.google.com">  
-                        <img src="./search.png"   
-                        alt="search icon" 
-                        width="30" height=30>
-                    </a>
-                </div>
+        <div class="search">
+          <a href="https://www.google.com">
+            <img src="./search.png" alt="search icon" width="30" height="30" />
+          </a>
+        </div>
 
-                <div class="contact">
-                    <a href="#bottom"> <h5>contact us</h5> </a>
-                </div>
-            </section>  
+        <div class="contact">
+          <a href="#bottom"> <h5>contact us</h5> </a>
+        </div>
+      </section>
 
-            <section class="top-bar right">     <!--made a link wrapping around each social media icon-->
-                <a href="https://www.facebook.com" target="blank"> <!-- target ="blank" -> new tab-->                 
-                    <div class="social-media-icon">
-                        <img src="./facebook.png" alt="facebook icon" width="20" height=20>
-                    </div>      
-                </a>
-                <a href="https://www.instagram.com" target="blank">
-                    <div class="social-media-icon">
-                        <img src="./instagram.png" alt="instagram icon" width="20" height=20>
-                    </div>
-                </a>
-                <a href="https://www.twitter.com" target="blank"> 
-                    <div class="social-media-icon">
-                        <img src="./twitter.png" alt="twitter icon" width="20" height=20>
-                    </div>
-                </a>
-            </section>
-        </nav>
+      <section class="top-bar right">
+        <!--made a link wrapping around each social media icon-->
+        <a href="https://www.facebook.com" target="blank">
+          <!-- target ="blank" -> new tab-->
+          <div class="social-media-icon">
+            <img
+              src="./facebook.png"
+              alt="facebook icon"
+              width="20"
+              height="20"
+            />
+          </div>
+        </a>
+        <a href="https://www.instagram.com" target="blank">
+          <div class="social-media-icon">
+            <img
+              src="./instagram.png"
+              alt="instagram icon"
+              width="20"
+              height="20"
+            />
+          </div>
+        </a>
+        <a href="https://www.twitter.com" target="blank">
+          <div class="social-media-icon">
+            <img
+              src="./twitter.png"
+              alt="twitter icon"
+              width="20"
+              height="20"
+            />
+          </div>
+        </a>
+      </section>
+    </nav>
 
-        <hr/> <!--Horizontal Rule, the thematic break-->
+    <hr />
+    <!--Horizontal Rule, the thematic break-->
 
-        <header class="header">
-            <div class="title">
-                <h1>News Magazine</h1>
-            </div>
-            <div class="header-2">
-                <h4>demo of a news site</h4>
-            </div>
-            <div class="date">
-                <h5>August 29, 2021</h5>
-            </div>
-        </header>  
+    <header class="header">
+      <div class="title">
+        <h1>News Magazine</h1>
+      </div>
+      <div class="header-2">
+        <h4>demo of a news site</h4>
+      </div>
+      <div class="date">
+        <h5>August 29, 2021</h5>
+      </div>
+    </header>
 
-        <!--navbar with five links. Put # in order to target it with id-->
-        <nav class="navbar">
-            <div class="link">
-                <a href="#top"> <h5>Home</h5> </a>
-            </div>
-            <div class="link">
-                <a href="#business"> <h5>Business</h5> </a>
-            </div>
-            <div class="link">
-                <a href="#tech"> <h5>Tech</h5> </a>
-            </div>
-            <div class="link">
-                <a href="#health"> <h5>Health</h5> </a>
-            </div>
-            <div class="link">
-                <a href="#sports"> <h5>Sports</h5> </a>
-            </div>
-        </nav>
+    <!--navbar with five links. Put # in order to target it with id-->
+    <nav class="navbar">
+      <div class="link">
+        <a href="#top"> <h5>Home</h5> </a>
+      </div>
+      <div class="link">
+        <a href="#business"> <h5>Business</h5> </a>
+      </div>
+      <div class="link">
+        <a href="#tech"> <h5>Tech</h5> </a>
+      </div>
+      <div class="link">
+        <a href="#health"> <h5>Health</h5> </a>
+      </div>
+      <div class="link">
+        <a href="#sports"> <h5>Sports</h5> </a>
+      </div>
+    </nav>
 
-        <!--first news row with one picture and some text-->
-        <article class="all-news">
-            <div class="big-news">
-                <img src="./corona.jpg" alt="image of coronavirus">
-            </div>
-            <div class="big-news" id="health"> <!--put an id so we can target it from navbar-->
-                <h3><span class="target-highlight">Health</span></h3> <!--class "target-highlight, it's going to only highlight the word "Health", will style it in CSS-->
-                <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
-                <h3>As Trump has predicted...</h3>
-            </div>
-        </article>
+    <!--first news row with one picture and some text-->
+    <article class="all-news">
+      <div class="big-news">
+        <img src="./corona.jpg" alt="image of coronavirus" />
+      </div>
+      <div class="big-news" id="health">
+        <!--put an id so we can target it from navbar-->
+        <h3><span class="target-highlight">Health</span></h3>
+        <!--class "target-highlight, it's going to only highlight the word "Health", will style it in CSS-->
+        <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
+        <h3>As Trump has predicted...</h3>
+      </div>
+    </article>
 
-        <hr/> <!--Horizontal Rule, the thematic break-->
+    <hr />
+    <!--Horizontal Rule, the thematic break-->
 
-        <!--other all-news with seven news card, each of them is put in to a div called other-news-->
-        <article class="all-news">
-            <div class="other-news">
-                <img src="./hospital.jpg" alt="image of a hospital">
-                <h3>Health</h3>
-                <h2>News Magazine's Health Systems declare state of emergency</h2>
-                <h3>Hospital director...</h3>
-            </div>
-            <div class="other-news" id="tech">
-                <img src="./robot.jpg" alt="image of robots on the moon">
-                <h3><span class="target-highlight">Tech</span></h3>
-                <h2>Tesla's building a robot</h2>
-                <h3>Elon Musk...</h3>
-            </div>
-            <div class="other-news">
-                <img src="./tech-news.jpg" alt="image of the word Tech News">
-                <h3>Tech</h3>
-                <h2>Today Tech news updates</h2>
-                <h3>See our daily Tech news updates...</h3>
-            </div>
-            <div class="other-news" id="business">
-                <img src="./cryptocurrency.jpg" alt="image of cryptocurrency">
-                <h3><span class="target-highlight">Business</span></h3>
-                <h2>The future of Cryptocurrency</h2>
-                <h3>The Cryptocurrency is taking off around the world. Predictions...</h3>
-            </div>
-            <div class="other-news">
-                <img src="./ikea.jpg" alt="image of an Ikea store">
-                <h3>Business</h3>
-                <h2>IKEA attempts to draw in more consumers with their new business strategy</h2>
-                <h3>The CEO of Ikea Group ...</h3>
-            </div>
-            <div class="other-news" id="sports">
-                <img src="./tokyo.jpg" alt="image of the word Tokyo">
-                <h3><span class="target-highlight">Sports</span></h3>
-                <h2>Olympics Games Tokyo 2020: Best moments</h2>
-                <h3>See the best moments of Olympics Games 2020...</h3>
-            </div>
-            <div class="other-news">
-                <img src="./sports.png" alt="image of athletes">
-                <h3>Sports</h3>
-                <h2>This week's biggest sports news</h2>
-                <h3>What you need to know...</h3>
-            </div>
-        </article>
+    <!--other all-news with seven news card, each of them is put in to a div called other-news-->
+    <article class="all-news">
+      <div class="other-news">
+        <img src="./hospital.jpg" alt="image of a hospital" />
+        <h3>Health</h3>
+        <h2>News Magazine's Health Systems declare state of emergency</h2>
+        <h3>Hospital director...</h3>
+      </div>
+      <div class="other-news" id="tech">
+        <img src="./robot.jpg" alt="image of robots on the moon" />
+        <h3><span class="target-highlight">Tech</span></h3>
+        <h2>Tesla's building a robot</h2>
+        <h3>Elon Musk...</h3>
+      </div>
+      <div class="other-news">
+        <img src="./tech-news.jpg" alt="image of the word Tech News" />
+        <h3>Tech</h3>
+        <h2>Today Tech news updates</h2>
+        <h3>See our daily Tech news updates...</h3>
+      </div>
+      <div class="other-news" id="business">
+        <img src="./cryptocurrency.jpg" alt="image of cryptocurrency" />
+        <h3><span class="target-highlight">Business</span></h3>
+        <h2>The future of Cryptocurrency</h2>
+        <h3>
+          The Cryptocurrency is taking off around the world. Predictions...
+        </h3>
+      </div>
+      <div class="other-news">
+        <img src="./ikea.jpg" alt="image of an Ikea store" />
+        <h3>Business</h3>
+        <h2>
+          IKEA attempts to draw in more consumers with their new business
+          strategy
+        </h2>
+        <h3>The CEO of Ikea Group ...</h3>
+      </div>
+      <div class="other-news" id="sports">
+        <img src="./tokyo.jpg" alt="image of the word Tokyo" />
+        <h3><span class="target-highlight">Sports</span></h3>
+        <h2>Olympics Games Tokyo 2020: Best moments</h2>
+        <h3>See the best moments of Olympics Games 2020...</h3>
+      </div>
+      <div class="other-news">
+        <img src="./sports.png" alt="image of athletes" />
+        <h3>Sports</h3>
+        <h2>This week's biggest sports news</h2>
+        <h3>What you need to know...</h3>
+      </div>
+    </article>
 
-        <footer id="bottom">  <!--put an id so we can target it från top-bar, "contact us"-->
-            <div class="contact-info"> 
-                <p>News Magazine</p>  
-                <p>Address Street 123</p>
-                <p>123 45 City</p>
-                <p>newsmagazine.com</p>
-                <p>E-mail: support@newsmagazine.com</p>
-                <p>Phone: 123 456 789</p>
-            </div>
-            <div class="copyright"> 
-                <p>&#169 News Magazine 2021</p>         <!--&#169 is the copyright symbol-->
-                <p>by Katie Wu | Team Foxes 🦊</p>  
-                <a href="https://www.technigo.io/" target="blank">
-                    <p><img src="./logo.svg" class="logo-technigo" alt="logo of Technigo"></p>
-                </a>
-            </div> 
-        </footer>
-    </body>
+    <footer id="bottom">
+      <!--put an id so we can target it från top-bar, "contact us"-->
+      <div class="contact-info">
+        <p>News Magazine</p>
+        <p>Address Street 123</p>
+        <p>123 45 City</p>
+        <p>newsmagazine.com</p>
+        <p>E-mail: support@newsmagazine.com</p>
+        <p>Phone: 123 456 789</p>
+      </div>
+      <div class="copyright">
+        <p>&#169; News Magazine 2021</p>
+        <!--&#169 is the copyright symbol-->
+        <p>by Katie Wu | Team Foxes 🦊</p>
+        <a href="https://www.technigo.io/" target="blank">
+          <p>
+            <img
+              src="./logo.svg"
+              class="logo-technigo"
+              alt="logo of Technigo"
+            />
+          </p>
+        </a>
+      </div>
+    </footer>
+  </body>
 </html>
