put all the images in folder assets

--- a/code/index.html
+++ b/code/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>News Magazine</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="./news.png" />
+    <link rel="icon" href="/assets/news.png" />
     <!--favicon-->
     <!--fonts from Google-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -21,12 +21,17 @@
     <nav class="top-bar" id="top">
       <section class="top-bar left">
         <div class="logo">
-          <img src="./news.png" alt="news icon" width="30" height="30" />
+          <img src="/assets/news.png" alt="news icon" width="30" height="30" />
         </div>
 
         <div class="search">
           <a href="https://www.google.com">
-            <img src="./search.png" alt="search icon" width="30" height="30" />
+            <img
+              src="/assets/search.png"
+              alt="search icon"
+              width="30"
+              height="30"
+            />
           </a>
         </div>
 
@@ -41,7 +46,7 @@
           <!-- target ="blank" -> new tab-->
           <div class="social-media-icon">
             <img
-              src="./facebook.png"
+              src="/assets/facebook.png"
               alt="facebook icon"
               width="20"
               height="20"
@@ -51,7 +56,7 @@
         <a href="https://www.instagram.com" target="blank">
           <div class="social-media-icon">
             <img
-              src="./instagram.png"
+              src="/assets/instagram.png"
               alt="instagram icon"
               width="20"
               height="20"
@@ -61,7 +66,7 @@
         <a href="https://www.twitter.com" target="blank">
           <div class="social-media-icon">
             <img
-              src="./twitter.png"
+              src="/assets/twitter.png"
               alt="twitter icon"
               width="20"
               height="20"
@@ -108,7 +113,7 @@
     <!--first news row with one picture and some text-->
     <article class="all-news">
       <div class="big-news">
-        <img src="./corona.jpg" alt="image of coronavirus" />
+        <img src="/assets/corona.jpg" alt="image of coronavirus" />
       </div>
       <div class="big-news" id="health">
         <!--put an id so we can target it from navbar-->
@@ -125,25 +130,25 @@
     <!--other all-news with seven news card, each of them is put in to a div called other-news-->
     <article class="all-news">
       <div class="other-news">
-        <img src="./hospital.jpg" alt="image of a hospital" />
+        <img src="/assets/hospital.jpg" alt="image of a hospital" />
         <h3>Health</h3>
         <h2>News Magazine's Health Systems declare state of emergency</h2>
         <h3>Hospital director...</h3>
       </div>
       <div class="other-news" id="tech">
-        <img src="./robot.jpg" alt="image of robots on the moon" />
+        <img src="/assets/robot.jpg" alt="image of robots on the moon" />
         <h3><span class="target-highlight">Tech</span></h3>
         <h2>Tesla's building a robot</h2>
         <h3>Elon Musk...</h3>
       </div>
       <div class="other-news">
-        <img src="./tech-news.jpg" alt="image of the word Tech News" />
+        <img src="/assets/tech-news.jpg" alt="image of the word Tech News" />
         <h3>Tech</h3>
         <h2>Today Tech news updates</h2>
         <h3>See our daily Tech news updates...</h3>
       </div>
       <div class="other-news" id="business">
-        <img src="./cryptocurrency.jpg" alt="image of cryptocurrency" />
+        <img src="/assets/cryptocurrency.jpg" alt="image of cryptocurrency" />
         <h3><span class="target-highlight">Business</span></h3>
         <h2>The future of Cryptocurrency</h2>
         <h3>
@@ -151,7 +156,7 @@
         </h3>
       </div>
       <div class="other-news">
-        <img src="./ikea.jpg" alt="image of an Ikea store" />
+        <img src="/assets/ikea.jpg" alt="image of an Ikea store" />
         <h3>Business</h3>
         <h2>
           IKEA attempts to draw in more consumers with their new business
@@ -160,13 +165,13 @@
         <h3>The CEO of Ikea Group ...</h3>
       </div>
       <div class="other-news" id="sports">
-        <img src="./tokyo.jpg" alt="image of the word Tokyo" />
+        <img src="/assets/tokyo.jpg" alt="image of the word Tokyo" />
         <h3><span class="target-highlight">Sports</span></h3>
         <h2>Olympics Games Tokyo 2020: Best moments</h2>
         <h3>See the best moments of Olympics Games 2020...</h3>
       </div>
       <div class="other-news">
-        <img src="./sports.png" alt="image of athletes" />
+        <img src="/assets/sports.png" alt="image of athletes" />
         <h3>Sports</h3>
         <h2>This week's biggest sports news</h2>
         <h3>What you need to know...</h3>
@@ -190,7 +195,7 @@
         <a href="https://www.technigo.io/" target="blank">
           <p>
             <img
-              src="./logo.svg"
+              src="/assets/logo.svg"
               class="logo-technigo"
               alt="logo of Technigo"
             />
