--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,9 @@
         </div>
 
         <div class="contact">
-          <a href="#bottom"> <h5>contact us</h5> </a>
+          <a href="#bottom">
+            <h5>contact us</h5>
+          </a>
         </div>
       </section>
 
@@ -94,19 +96,29 @@
     <!--navbar with five links. Put # in order to target it with id-->
     <nav class="navbar">
       <div class="link">
-        <a href="#top"> <h5>Home</h5> </a>
+        <a href="#top">
+          <h5>Home</h5>
+        </a>
       </div>
       <div class="link">
-        <a href="#business"> <h5>Business</h5> </a>
+        <a href="#business">
+          <h5>Business</h5>
+        </a>
       </div>
       <div class="link">
-        <a href="#tech"> <h5>Tech</h5> </a>
+        <a href="#tech">
+          <h5>Tech</h5>
+        </a>
       </div>
       <div class="link">
-        <a href="#health"> <h5>Health</h5> </a>
+        <a href="#health">
+          <h5>Health</h5>
+        </a>
       </div>
       <div class="link">
-        <a href="#sports"> <h5>Sports</h5> </a>
+        <a href="#sports">
+          <h5>Sports</h5>
+        </a>
       </div>
     </nav>
 
@@ -117,7 +129,9 @@
       </div>
       <div class="big-news" id="health">
         <!--put an id so we can target it from navbar-->
-        <h3><span class="target-highlight">Health</span></h3>
+        <h3>
+          <span class="target-highlight">Health</span>
+        </h3>
         <!--class "target-highlight, it's going to only highlight the word "Health", will style it in CSS-->
         <h2>Breaking news: Coronavirus has miraculously disappeared ?</h2>
         <h3>As Trump has predicted...</h3>
@@ -137,7 +151,9 @@
       </div>
       <div class="other-news" id="tech">
         <img src="/assets/robot.jpg" alt="image of robots on the moon" />
-        <h3><span class="target-highlight">Tech</span></h3>
+        <h3>
+          <span class="target-highlight">Tech</span>
+        </h3>
         <h2>Tesla's building a robot</h2>
         <h3>Elon Musk...</h3>
       </div>
@@ -149,7 +165,9 @@
       </div>
       <div class="other-news" id="business">
         <img src="/assets/cryptocurrency.jpg" alt="image of cryptocurrency" />
-        <h3><span class="target-highlight">Business</span></h3>
+        <h3>
+          <span class="target-highlight">Business</span>
+        </h3>
         <h2>The future of Cryptocurrency</h2>
         <h3>
           The Cryptocurrency is taking off around the world. Predictions...
@@ -166,7 +184,9 @@
       </div>
       <div class="other-news" id="sports">
         <img src="/assets/tokyo.jpg" alt="image of the word Tokyo" />
-        <h3><span class="target-highlight">Sports</span></h3>
+        <h3>
+          <span class="target-highlight">Sports</span>
+        </h3>
         <h2>Olympics Games Tokyo 2020: Best moments</h2>
         <h3>See the best moments of Olympics Games 2020...</h3>
       </div>
