--- a/code/index.html
+++ b/code/index.html
@@ -14,13 +14,13 @@
     <!-- dont forget the meta tag for responsiveness -->
   </head>
   <body>
-    <header>
+    <header class="header">
 
       <!-- Some kind of logo and navbar -->
 
       <a class="logo" href="#small-news-section"><img src="./img/newspaper.png" alt="apple-logo" /></a>
       <h1 class="site-name">The Oldest News</h1>
-      <nav>
+      <nav class="nav">
        <a class="link" id="one" href="#home">Home</a>
        <a class="link" id="two" href="#About">About</a>
        <a class="tablet-logo" href="#small-news-section"><img src="./img/newspaper.png" alt="apple-logo" /></a>
@@ -52,7 +52,7 @@
       
       <!--Small news content-->
       
-        <article class="article">
+      <article class="article">
         <img class="small-image" src="./img/corona.jpg" alt="corona virus">
         <h3 class="article-heading">We are in a Pandemic! 2020</h3>
         <p>The Year 2000 problem, also known as the Y2K problem,
@@ -80,7 +80,7 @@
           formatting and storage of calendar data for dates in 
           </p>
         </div>
-        </article>
+      </article>
       <article class="article">
         <img class="small-image" src="./img/tjernobyl.jpg" alt="radioactive sign">
         <h3 class="article-heading">Nuclear accident, 1986 in Tjernobyl</h3>
@@ -88,8 +88,8 @@
           Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
           refers to potential computer errors related to the 
           formatting and storage of calendar data for dates in 
-          </p>
-        </article>
+        </p>
+      </article>
       <article class="article">
         <img class="small-image" src="./img/gun.jpg" alt="gun">
         <h3 class="article-heading">The swedish primeminister <i>Olof Palme</i> was shot on open street. 1986</h3>
@@ -97,7 +97,7 @@
           Millennium bug, Y2K bug, Y2K glitch or Y2K error, 
           refers to potential computer errors related to the 
           formatting and storage of calendar data for dates in
-          </p>
+        </p>
       </article>
       <article class="article">
         <img class="small-image" src="./img/ship.jpg" alt="sinking ship">
